--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.7",
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-scroll": "^1.8.1",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.6",
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.1.5"
   }
 }
